--- a/src/main/asciidoc/object-mapping/projections.adoc
+++ b/src/main/asciidoc/object-mapping/projections.adoc
@@ -23,7 +23,7 @@ the common Spring Data infrastructure. The latter is already ensured, as the dom
 the first place.
 
 DTO based projections are somewhat more flexible when used with custom queries. While the standard query is derived from
-the original domain type and therefore only the properties and relationship beeing defined there can be used, custom queries
+the original domain type and therefore only the properties and relationship being defined there can be used, custom queries
 can add additional properties.
 
 The rules are as follows: first, the properties of the domain type are used to populate the DTO. In case the DTO declares
@@ -171,7 +171,7 @@ interface TestRepository extends CrudRepository<TestEntity, Long> { // <.>
 
     List<TestEntity> findAll(); // <.>
 
-    List<ExtendedTestEntity> findAllExtendedEntites(); // <.>
+    List<ExtendedTestEntity> findAllExtendedEntities(); // <.>
 
     List<TestEntityInterfaceProjection> findAllInterfaceProjections(); // <.>
 
@@ -183,8 +183,8 @@ interface TestRepository extends CrudRepository<TestEntity, Long> { // <.>
 ----
 <.> The domain type of the repository is `TestEntity`
 <.> Methods returning one or more `TestEntity` will just return instances of it, as it matches the domain type
-<.> Methods returning one or more instances of class that extend the domain type will just return instances
-    of the extending class. The domain type of the method in question will the extended class, which
+<.> Methods returning one or more instances of classes that extend the domain type will just return instances
+    of the extending class. The domain type of the method in question will be the extended class, which
     still satisfies the domain type of the repository itself
 <.> This method returns an interface projection, the return type of the method is therefore different
     from the repository's domain type. The interface can only access properties defined in the domain type
@@ -201,7 +201,7 @@ TIP: While the repository in <<projections.simple-entity-repository,the listing 
      applied to both closed and open interface projections as well as to class based DTO projections:
      +
      +
-     The key to a dynamic projection is to specifiy the desired projection type as the last parameter to a query method
+     The key to a dynamic projection is to specify the desired projection type as the last parameter to a query method
      in a repository like this: `<T> Collection<T> findByName(String name, Class<T> type)`. This is a declaration that
      could be added to the `TestRepository` above and allow for different projections retrieved by the same method, without
      to repeat a possible `@Query` annotation on several methods.
