--- a/src/main/asciidoc/object-mapping/mapping.adoc
+++ b/src/main/asciidoc/object-mapping/mapping.adoc
@@ -48,8 +48,8 @@ See <<conversions>> for more information on that.
 * `@LastModifiedDate`: Applied at the field level to indicate the last modification date of a node.
 * `@PersistenceConstructor`: Applied at one constructor to mark it as a the preferred constructor when reading entities.
 * `@Persistent`: Applied at the class level to indicate this class is a candidate for mapping to the database.
-* `@Version`: Applied at field level is used for optimistic locking and checked for modification on save operations.
-The initial value is zero which is bumped automatically on every update.
+* `@Version`: Applied at field level it is used for optimistic locking and checked for modification on save operations.
+ The initial value is zero which is bumped automatically on every update.
 
 Have a look at <<auditing>> for all annotations regarding auditing support.
 
@@ -62,11 +62,11 @@ To map an Object to nodes in the graph and vice versa, we need a label to identi
 
 `@Node` has an attribute `labels` that allows you to configure one or more labels to be used when reading and writing instances of the annotated class.
 The `value` attribute is an alias for `labels`.
-If you don't specify a label, than the simple class name will be used as the primary label.
+If you don't specify a label, then the simple class name will be used as the primary label.
 In case you want to provide multiple labels, you could either:
 
 . Supply an array to the `labels` property.
-The first element in the array will considered as the primary label.
+The first element in the array will be considered as the primary label.
 . Supply a value for `primaryLabel` and put the additional labels in `labels`.
 
 The primary label should always be the most concrete label that reflects your domain class.
@@ -285,7 +285,7 @@ NOTE: We haven't modelled the relationship between movies and people in both dir
 Why is that?
 We see the `MovieEntity` as the aggregate root, owning the relationships.
 On the other hand, we want to be able to pull all people from the database without selecting all the movies associated with them.
-Please consider your applications use case before you try to map every relationship in your database in every direction.
+Please consider your application's use case before you try to map every relationship in your database in every direction.
 While you can do this, you may end up rebuilding a graph database inside your object graph and this is not the intention of a mapping framework.
 
 [[mapping.id-handling]]
@@ -294,7 +294,7 @@ While you can do this, you may end up rebuilding a graph database inside your ob
 [[mapping.id-handling.internal-id]]
 === Using the internal Neo4j id
 
-The easiest way to give your domain classes an unique identifier is the combination of `@Id` and `@GeneratedValue`
+The easiest way to give your domain classes a unique identifier is the combination of `@Id` and `@GeneratedValue`
 on a field of type `Long` (preferable the object, not the scalar `long`, as literal `null` is the better indicator whether an instance is new or not):
 
 .Mutable MovieEntity with internal Neo4j id
@@ -367,7 +367,7 @@ You either have to provide a setter for the id attribute or something like a _wi
 
 The `@GeneratedValue` annotation can take a class implementing `org.springframework.data.neo4j.core.schema.IdGenerator` as parameter.
 SDN provides `InternalIdGenerator` (the default) and `UUIDStringGenerator` out of the box.
-The later generates new UUIDs for each entity and returns them as `java.lang.String`.
+The latter generates new UUIDs for each entity and returns them as `java.lang.String`.
 An application entity using that would look like this:
 
 .Mutable MovieEntity with externally generated surrogate key
