--- a/src/main/asciidoc/faq/faq.adoc
+++ b/src/main/asciidoc/faq/faq.adoc
@@ -335,7 +335,7 @@ user can impersonate many tenants. Depending on your setup this will drastically
 The feature requires Neo4j Enterprise 4.4+ on the server side and a 4.4+ driver on the client side.
 
 For both imperative and reactive versions you need to provide a `UserSelectionProvider` respectively a `ReactiveUserSelectionProvider`.
-The same instance needs to be passed along to the `Neo4Client` and `Neo4jTransactionmanager` respectively their reactive variants.
+The same instance needs to be passed along to the `Neo4Client` and `Neo4jTransactionManager` respectively their reactive variants.
 
 In <<bootless-imperative-configuration,Bootless imperative>> and <<bootless-reactive-configuration, and reactive>> configurations you just need to provide a bean of the
 type in question:
